app5PasswordStorageAndVerification/microservice3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app5-microservice3
spec:
  selector:
    app: app5-microservice3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8042
  type: ClusterIP
