app5PasswordStorageAndVerification/microservice3/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app5-microservice3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /password/reset
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app5-microservice3
        pathType: Prefix
        backend:
          service:
            name: app5-microservice3
            port:
              number: 80
